--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@cloudgeek/playcore-hls": "^0.1.3",
+    "@cloudgeek/vue3-video-player": "^0.3.7",
     "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
     "@fortawesome/free-regular-svg-icons": "^6.0.0-beta3",
     "@fortawesome/free-solid-svg-icons": "^6.0.0-beta3",
@@ -39,6 +41,7 @@
     "vue-recaptcha": "^2.0.1",
     "vue-recaptcha-v3": "^2.0.1",
     "vue-router": "^4.0.12",
+    "vue-vimeo-player": "^0.2.2",
     "vue3-recaptcha2": "^1.4.0",
     "vuelidate": "^0.7.7",
     "vuex": "^4.0.2",
